--- a/src/pages/section/MenuSection/MenuSection.module.scss
+++ b/src/pages/section/MenuSection/MenuSection.module.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   padding: 80px 120px;
-  gap: 30px;
+  gap: 40px;
 
   .flying-asset-one {
     position: absolute;
